fix: resolving bug in the version mobile

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -133,7 +133,6 @@ header h1 span{
   display: block;
 }
 #date{
-  
   text-align: none;
 }
 
@@ -179,6 +178,7 @@ footer a:hover{
     margin-bottom: 20px;
     height: 200px;
     padding: 15px;
+    border-radius: 10px;
   }
   .select-info h2{
     width: 100%;
@@ -201,6 +201,15 @@ footer a:hover{
     float: none;
     width: 100%;
     padding: 30px 10px ;
+    border-radius: 10px;
+  }
+
+  .data{
+    margin-top: 25px;
+    margin-bottom: 25px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
   }
 
   .info-data{
@@ -218,6 +227,8 @@ footer a:hover{
   }
   #update{
     /* position: relative; */
-    font-size: 14px;
+    font-size: 10px;
+    bottom: -15px;
+    right: 15px;
   }
 }
